# gdm

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs
.github/workflows/: audit.yml  ci.yml
src/: lib.rs  main.rs  project.rs  util.rs
src/project/: config.rs  engine.rs  versions.rs
src/updater/: main.rs
src/util/: archive.rs  dirs.rs  download.rs  os.rs
