[package]
name = "gdm"
version = "0.1.0"
edition = "2021"
default-run = "gdm"

[[bin]]
name = "gdm"
path = "src/main.rs"

[[bin]]
name = "gdm-update"
path = "src/updater/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
directories = "5.0.1"
dotenvy = "0.15.7"
dunce = "1.0.4"
futures-util = "0.3.30"
indicatif = "0.17.8"
path-clean = "1.0.1"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json", "stream"] }
serde = "1.0.198"
serde_derive = "1.0.198"
serde_json = "1.0.116"
serde_with = "3.8.0"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
zip = "1.1.1"
anyhow = "1.0.82"
once_cell = "1.19.0"
