[package]
name = "gdm"
edition = "2021"
build = "build.rs"
description = "Godot Project Manager"
homepage = "https://beak-a-boo.com"
default-run = "gdm"

[[bin]]
name = "gdm-update"
path = "src/bin/update.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
directories = "6.0.0"
dotenvy = "0.15.7"
dunce = "1.0.5"
futures-util = "0.3.31"
indicatif = "0.17.9"
path-clean = "1.0.1"
rand = "0.8.5"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.137"
serde_with = "3.12.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
zip = "2.2.2"
anyhow = "1.0.95"
const_format = "0.2.34"

[build-dependencies]
built = { version = "0.7.5", features = ["git2"] }

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"