[package]
name = "gdm"
edition = "2024"
build = "build.rs"
description = "Godot Project Manager"
homepage = "https://beak-a-boo.com"
default-run = "gdm"

[[bin]]
name = "gdm-update"
path = "src/bin/update.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
dotenvy = { git = "https://github.com/allan2/dotenvy", rev = "fa25166994d6978bd2e002f0ed190c0c39674ebe", features = ["macros"] }
dunce = "1.0.5"
futures-util = "0.3.32"
indicatif = "0.18.4"
path-clean = "1.0.1"
rand = "0.10.1"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.137"
serde_with = "3.12.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
zip = "2.2.2"
anyhow = "1.0.95"
const_format = "0.2.34"

[build-dependencies]
built = { version = "0.8.0", features = ["git2"] }
